package org.atlantfs;

interface FileIblock extends IBlock, FileOperations {
}
